--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,8 @@
         </div>
         <br>
         <div class="center text-big bold">
-           adadasd a asdasd  
+          Hi, this is Bably here. <br> I made a local change !
+		  
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
